# remla-ML

./: .gitignore  ACTIVITY.md  LICENSE  Makefile  OPERATION.md  README.md  conftest.py  dvc.yaml  params.yaml  pyproject.toml  pytest.ini  report_tests.py  setup.py  test_environment.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: ML-testing.yml  data_testing.yml  infrastructure_testing.yml  pylint.yml  pytest.yml
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: download_dataset.py  make_dataset.py  tokenize_dataset.py  use_preprocessing.py
src/models/: predict_model.py  train_model.py
tests/: model_infrastructure_test.py  test_features_data.py  test_model_development.py  test_model_infrastructure.py  test_monitoring.py
