[tool.poetry]
name = "remla-ml-group3"
version = "0.1.0"
description = ""
authors = ["Alexandru Dumitriu <a.dumitriu-1@student.tudelft.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scikit-learn = "^1.1.0"
tensorflow = "^2.7.0"
tensorflow-io-gcs-filesystem = "0.31.0"
matplotlib = "^3.4.3"
keras = "^2.6.0"
jupyter = "^1.0.0"
pandas = "^2.2.2"
pylint = "3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
