[tool.poetry]
name = "remla-ml-group3"
version = "0.1.0"
description = ""
authors = ["Alexandru Dumitriu <a.dumitriu-1@student.tudelft.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scikit-learn = "^1.4.2"
tensorflow = ">=2.16,<2.17"
matplotlib = "^3.8.4"
keras = "^3.3.3"
jupyter = "^1.0.0"
pandas = "^2.2.2"
pylint = "^3.1.0"
dvc = "^3.50.1"
dvc-gdrive = "^3.0.1"
gdown = "^5.1.0"
psutil = "^5.9.4"
lib-ml-group3 = "^0.3.1"
tensorflow-io-gcs-filesystem = "0.31.0"
anybadge = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
flake8 = "^5.0.4"
flask = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
